--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
 
 
     - name: Build
-      run: php branch-usage-checker app:build --build-version=0.0
+      run: composer build -- --build-version=0.0
 
     - name: Build Check
       run: php builds/branch-usage-checker --version
