--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 name: Tests
 
-on: ['push', 'pull_request']
+on: [ 'push', 'pull_request' ]
 
 jobs:
   ci:
@@ -8,39 +8,41 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        php: ['8.0']
-        dependency-version: [prefer-lowest, prefer-stable]
+        os: [ ubuntu-latest ]
+        php: [ '8.0' ]
+        dependency-version: [ prefer-lowest, prefer-stable ]
 
     name: PHP ${{ matrix.php }} - ${{ matrix.os }} - ${{ matrix.dependency-version }}
 
     steps:
 
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ matrix.php }}
-        extensions: fileinfo
-        tools: composer:v2
-        coverage: pcov
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          extensions: fileinfo
+          tools: composer:v2
+          coverage: pcov
 
-    - name: Setup Problem Matches
-      run: |
-        echo "::add-matcher::${{ runner.tool_cache }}/php.json"
-        echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
+      - name: Setup Problem Matches
+        run: |
+          echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+          echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
-    - name: Install Composer dependencies
-      run: composer update --${{ matrix.dependency-version }} --no-interaction --prefer-dist --no-suggest
+      - name: Install Composer dependencies
+        run: composer update --${{ matrix.dependency-version }} --no-interaction --prefer-dist --no-suggest
 
-    - name: PHPUnit Testing
-      run: vendor/bin/pest --coverage
+      - name: PHPUnit Testing
+        run: vendor/bin/pest --coverage
 
+      - name: Copy application to phar
+        run: cp application application.phar
 
-    - name: Build
-      run: composer build -- --build-version=0.0
+      - name: Build
+        run: php application app:build branch-usage-checker --build-version=0.0
 
-    - name: Build Check
-      run: php builds/branch-usage-checker --version
+      - name: Build Check
+        run: php builds/branch-usage-checker --version
