--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "authors": [
         {
             "name": "Ismo Vuorinen",
-            "email": "ismo@ivuorinen.net"
+            "homepage": "https://github.com/ivuorinen"
         }
     ],
     "homepage": "https://github.com/ivuorinen/branch-usage-checker",
@@ -22,7 +22,7 @@
         "source": "https://github.com/ivuorinen/branch-usage-checker"
     },
     "require": {
-        "php": ">=8.0.2",
+        "php": ">=8.1",
         "guzzlehttp/guzzle": "^7.4",
         "illuminate/http": "^9.0",
         "laravel-zero/phar-updater": "^1.2",
@@ -61,7 +61,7 @@
         },
         "optimize-autoloader": true,
         "platform": {
-            "php": "8.0.2"
+            "php": "8.1"
         },
         "preferred-install": "dist",
         "sort-packages": true
