--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,10 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
+[*.json]
+indent_size = 2
+insert_final_newline = true
+
 [*.yml]
 indent_style = space
 indent_size = 2
