--- a/composer.json
+++ b/composer.json
@@ -1,79 +1,80 @@
 {
-    "name": "ivuorinen/branch-usage-checker",
-    "description": "GitHub Project branch usage checker.",
-    "license": "MIT",
-    "type": "project",
-    "keywords": [
-        "branch",
-        "usage",
-        "github",
-        "console",
-        "cli"
-    ],
-    "authors": [
-        {
-            "name": "Ismo Vuorinen",
-            "homepage": "https://github.com/ivuorinen"
-        }
-    ],
-    "homepage": "https://github.com/ivuorinen/branch-usage-checker",
-    "support": {
-        "issues": "https://github.com/ivuorinen/branch-usage-checker/issues",
-        "source": "https://github.com/ivuorinen/branch-usage-checker"
-    },
-    "require": {
-        "php": ">=8.1",
-        "guzzlehttp/guzzle": "^7.4",
-        "illuminate/http": "^9.0",
-        "laravel-zero/phar-updater": "^1.2",
-        "nunomaduro/termwind": "^1.3",
-        "spatie/data-transfer-object": "^3.7"
-    },
-    "require-dev": {
-        "ergebnis/composer-normalize": "^2.23",
-        "laravel-zero/framework": "^9.0",
-        "mockery/mockery": "^1.4.4",
-        "pestphp/pest": "^1.21.1",
-        "roave/security-advisories": "dev-latest"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "bin": [
-        "builds/branch-usage-checker"
-    ],
-    "config": {
-        "allow-plugins": {
-            "pestphp/pest-plugin": true,
-            "ergebnis/composer-normalize": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
-        },
-        "optimize-autoloader": true,
-        "platform": {
-            "php": "8.1"
-        },
-        "preferred-install": "dist",
-        "sort-packages": true
-    },
-    "scripts": {
-        "post-autoload-dump": [
-            "composer normalize"
-        ],
-        "build": [
-            "cp application application.phar",
-            "@php application app:build branch-usage-checker"
-        ],
-        "x": "@php builds/branch-usage-checker"
+  "name": "ivuorinen/branch-usage-checker",
+  "description": "GitHub Project branch usage checker.",
+  "license": "MIT",
+  "type": "project",
+  "keywords": [
+    "branch",
+    "usage",
+    "github",
+    "console",
+    "cli"
+  ],
+  "authors": [
+    {
+      "name": "Ismo Vuorinen",
+      "homepage": "https://github.com/ivuorinen"
     }
+  ],
+  "homepage": "https://github.com/ivuorinen/branch-usage-checker",
+  "support": {
+    "issues": "https://github.com/ivuorinen/branch-usage-checker/issues",
+    "source": "https://github.com/ivuorinen/branch-usage-checker"
+  },
+  "require": {
+    "php": ">=8.1",
+    "guzzlehttp/guzzle": "^7.4",
+    "illuminate/http": "^10.0",
+    "laravel-zero/phar-updater": "^1.2",
+    "nunomaduro/termwind": "^1.3",
+    "spatie/data-transfer-object": "^3.7"
+  },
+  "require-dev": {
+    "ergebnis/composer-normalize": "^2.23",
+    "laravel-zero/framework": "^10.0",
+    "mockery/mockery": "^1.4.4",
+    "pestphp/pest": "^1.21.1",
+    "roave/security-advisories": "dev-latest"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/",
+      "Database\\Factories\\": "database/factories/",
+      "Database\\Seeders\\": "database/seeders/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "bin": [
+    "builds/branch-usage-checker"
+  ],
+  "config": {
+    "allow-plugins": {
+      "pestphp/pest-plugin": true,
+      "ergebnis/composer-normalize": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    },
+    "optimize-autoloader": true,
+    "platform": {
+      "php": "8.1"
+    },
+    "preferred-install": "dist",
+    "sort-packages": true
+  },
+  "scripts": {
+    "post-autoload-dump": [
+      "composer normalize"
+    ],
+    "build": [
+      "cp application application.phar",
+      "@php application app:build branch-usage-checker"
+    ],
+    "test": "vendor/bin/pest",
+    "x": "@php builds/branch-usage-checker"
+  }
 }
