--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ '8.1' ]
+        php: [ "8.1" ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -61,7 +61,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Publish the PHAR
     needs:
-      - 'build-phar'
+      - "build-phar"
     if: github.event_name == 'release'
     steps:
       - uses: actions/download-artifact@v3
