--- a/composer.json
+++ b/composer.json
@@ -55,9 +55,9 @@
   ],
   "config": {
     "allow-plugins": {
-      "pestphp/pest-plugin": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true,
       "ergebnis/composer-normalize": true,
-      "dealerdirect/phpcodesniffer-composer-installer": true
+      "pestphp/pest-plugin": true
     },
     "optimize-autoloader": true,
     "platform": {
