--- a/composer.json
+++ b/composer.json
@@ -22,17 +22,17 @@
     "source": "https://github.com/ivuorinen/branch-usage-checker"
   },
   "require": {
-    "php": ">=8.1",
-    "guzzlehttp/guzzle": "^7.4",
-    "illuminate/http": "^10.0",
+    "php": "^8.2",
+    "guzzlehttp/guzzle": "^7",
+    "illuminate/http": "^10",
     "laravel-zero/phar-updater": "^1.2",
-    "nunomaduro/termwind": "^1.3",
+    "nunomaduro/termwind": "^1",
     "spatie/data-transfer-object": "^3.7"
   },
   "require-dev": {
-    "ergebnis/composer-normalize": "^2.23",
-    "laravel-zero/framework": "^10.0",
-    "mockery/mockery": "^1.4.4",
+    "ergebnis/composer-normalize": "^2",
+    "laravel-zero/framework": "^10",
+    "mockery/mockery": "^1",
     "pestphp/pest": "^2",
     "roave/security-advisories": "dev-latest"
   },
@@ -61,7 +61,7 @@
     },
     "optimize-autoloader": true,
     "platform": {
-      "php": "8.1"
+      "php": "8.2"
     },
     "preferred-install": "dist",
     "sort-packages": true
