--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "source": "https://github.com/ivuorinen/branch-usage-checker"
   },
   "require": {
-    "php": "^8.2",
+    "php": "^8.4",
     "guzzlehttp/guzzle": "^7",
     "illuminate/http": "^11",
     "laravel-zero/phar-updater": "^1.2",
@@ -60,9 +60,6 @@
       "pestphp/pest-plugin": true
     },
     "optimize-autoloader": true,
-    "platform": {
-      "php": "8.2"
-    },
     "preferred-install": "dist",
     "sort-packages": true
   },
@@ -73,7 +70,7 @@
     "build": [
       "cp application application.phar",
       "@php application app:build branch-usage-checker",
-      "rm application.phar"
+      "rm -f application.phar || true"
     ],
     "test": "vendor/bin/pest",
     "x": "@php builds/branch-usage-checker"
