--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,7 @@
   },
   "require": {
     "php": "^8.4",
-    "guzzlehttp/guzzle": "^7",
     "illuminate/http": "^12.17",
-    "laravel-zero/phar-updater": "^1.2",
-    "nunomaduro/termwind": "^2",
     "spatie/data-transfer-object": "^3.7"
   },
   "require-dev": {
@@ -36,13 +33,14 @@
     "pestphp/pest": "^4",
     "roave/security-advisories": "dev-latest"
   },
+  "suggest": {
+    "ext-pcov": "Required for code coverage reporting (composer coverage)"
+  },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "autoload": {
     "psr-4": {
-      "App\\": "app/",
-      "Database\\Factories\\": "database/factories/",
-      "Database\\Seeders\\": "database/seeders/"
+      "App\\": "app/"
     }
   },
   "autoload-dev": {
@@ -55,7 +53,6 @@
   ],
   "config": {
     "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true,
       "ergebnis/composer-normalize": true,
       "pestphp/pest-plugin": true
     },
@@ -72,6 +69,7 @@
       "@php application app:build branch-usage-checker",
       "rm -f application.phar || true"
     ],
+    "coverage": "php -d pcov.enabled=1 vendor/bin/pest --coverage",
     "test": "vendor/bin/pest",
     "x": "@php builds/branch-usage-checker"
   }
