--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,8 @@
     "spatie/data-transfer-object": "^3.7"
   },
   "require-dev": {
+    "captainhook/captainhook": "^5.28",
+    "captainhook/hook-installer": "^1.0",
     "ergebnis/composer-normalize": "^2",
     "laravel-zero/framework": "^12",
     "mockery/mockery": "^1",
@@ -54,6 +56,7 @@
   ],
   "config": {
     "allow-plugins": {
+      "captainhook/hook-installer": true,
       "ergebnis/composer-normalize": true,
       "pestphp/pest-plugin": true
     },
