--- a/.editorconfig
+++ b/.editorconfig
@@ -9,12 +9,14 @@ indent_size = 4
 trim_trailing_whitespace = true
 
 [*.md]
+indent_size = 2
 trim_trailing_whitespace = false
 
-[*.json]
+[*.xml]
 indent_size = 2
-insert_final_newline = true
 
-[*.yml]
-indent_style = space
+[*.{json,jsonc}]
+indent_size = 2
+
+[*.{yml,yaml}]
 indent_size = 2
