feat: add PHPMD linter and fix Codacy markdownlint config
Add PHPMD as a dev dependency with cleancode, codesize, unusedcode, and
naming rulesets. Integrate via composer lint:phpmd script, lint:all, and
CaptainHook pre-commit hook.

Split markdownlint config into .markdownlint.jsonc (rules) and
.markdownlint-cli2.jsonc (ignores only) so Codacy's plain markdownlint
can discover the shared rules file.

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     "laravel-zero/framework": "^12",
     "mockery/mockery": "^1",
     "pestphp/pest": "^4",
+    "phpmd/phpmd": "^2.15",
     "roave/security-advisories": "dev-latest",
     "squizlabs/php_codesniffer": "^4.0"
   },
@@ -79,6 +80,7 @@
     "lint": "vendor/bin/phpcs",
     "lint:all": [
       "@lint",
+      "@lint:phpmd",
       "@lint:md",
       "@lint:ec"
     ],
@@ -87,6 +89,7 @@
       "npx markdownlint-cli2 '**/*.md' '#vendor' '#node_modules'",
       "npx markdown-table-formatter --check *.md docs/**/*.md"
     ],
+    "lint:phpmd": "vendor/bin/phpmd app,tests text phpmd.xml",
     "test": "vendor/bin/pest",
     "x": "@php builds/branch-usage-checker"
   }
