--- a/composer.json
+++ b/composer.json
@@ -23,26 +23,28 @@
   },
   "require": {
     "php": "^8.4",
-    "guzzlehttp/guzzle": "^7",
     "illuminate/http": "^12.17",
-    "laravel-zero/phar-updater": "^1.2",
-    "nunomaduro/termwind": "^2",
     "spatie/data-transfer-object": "^3.7"
   },
   "require-dev": {
+    "captainhook/captainhook": "^5.28",
+    "captainhook/hook-installer": "^1.0",
     "ergebnis/composer-normalize": "^2",
     "laravel-zero/framework": "^12",
     "mockery/mockery": "^1",
     "pestphp/pest": "^4",
-    "roave/security-advisories": "dev-latest"
+    "phpmd/phpmd": "^2.15",
+    "roave/security-advisories": "dev-latest",
+    "squizlabs/php_codesniffer": "^4.0"
+  },
+  "suggest": {
+    "ext-pcov": "Required for code coverage reporting (composer coverage)"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "autoload": {
     "psr-4": {
-      "App\\": "app/",
-      "Database\\Factories\\": "database/factories/",
-      "Database\\Seeders\\": "database/seeders/"
+      "App\\": "app/"
     }
   },
   "autoload-dev": {
@@ -55,7 +57,7 @@
   ],
   "config": {
     "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "captainhook/hook-installer": true,
       "ergebnis/composer-normalize": true,
       "pestphp/pest-plugin": true
     },
@@ -72,6 +74,22 @@
       "@php application app:build branch-usage-checker",
       "rm -f application.phar || true"
     ],
+    "coverage": "php -d pcov.enabled=1 vendor/bin/pest --coverage",
+    "format": "vendor/bin/phpcbf || true",
+    "format:md": "npx markdown-table-formatter *.md docs/**/*.md",
+    "lint": "vendor/bin/phpcs",
+    "lint:all": [
+      "@lint",
+      "@lint:phpmd",
+      "@lint:md",
+      "@lint:ec"
+    ],
+    "lint:ec": "npx editorconfig-checker",
+    "lint:md": [
+      "npx markdownlint-cli2 '**/*.md' '#vendor' '#node_modules'",
+      "npx markdown-table-formatter --check *.md docs/**/*.md"
+    ],
+    "lint:phpmd": "vendor/bin/phpmd app,tests text phpmd.xml",
     "test": "vendor/bin/pest",
     "x": "@php builds/branch-usage-checker"
   }
