refactor(dto): replace spatie/data-transfer-object with plain readonly class
The spatie/data-transfer-object package is abandoned. Replace it with a
native PHP 8.4 final readonly class using a static factory method,
removing the dependency entirely.

--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
   },
   "require": {
     "php": "^8.4",
-    "illuminate/http": "^12.17",
-    "spatie/data-transfer-object": "^3.7"
+    "illuminate/http": "^12.17"
   },
   "require-dev": {
     "captainhook/captainhook": "^5.28",
